--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<!--<Import Project="Build\Build.props" />-->
+	<Import Project="Build\Build.props" />
 	<Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
 	<PropertyGroup>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,6 +46,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="Properties\AssemblyInfo.cs" />
+		<None Include="Build\Build - Copy.targets" />
 		<None Include="Properties\PublishProfiles\Debug.pubxml" />
 		<None Include="Properties\PublishProfiles\Release.pubxml" />
 		<None Include="Build\Build.props" />
@@ -83,5 +84,5 @@
 	<!--
 	<Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
 	-->
-	<!--<Import Project="Build\Build.targets" />-->
+	<Import Project="Build\Build.targets" />
 </Project>
