--- a/WebApplication/Web.Release.config
+++ b/WebApplication/Web.Release.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<appSettings>
-		<add key="Transform" value="Release" xdt:Transform="Insert" />
+		<add key="Build-Transform" value="Web.Release.config" xdt:Transform="Insert" />
 	</appSettings>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
