--- a/WebApplication/Web.Stage.config
+++ b/WebApplication/Web.Stage.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<appSettings>
-		<add key="Build-Transform" value="Web.Debug.config" xdt:Transform="Insert" />
+		<add key="Publish-Transform" value="Web.Stage.config" xdt:Transform="Insert" />
 	</appSettings>
 </configuration>
