--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -46,14 +46,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Build\Build - Copy %282%29.targets">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Build\Build - Copy %283%29.targets">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Build\Build - Copy.props">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Build\Build - Copy %284%29.targets">
+      <SubType>Designer</SubType>
+    </Content>
+    <None Include="Properties\PublishProfiles\Empty.pubxml" />
+    <None Include="Properties\PublishProfiles\Production.pubxml" />
+    <None Include="Properties\PublishProfiles\Stage.pubxml" />
     <None Include="Build\Build - Copy.targets" />
-    <None Include="Properties\PublishProfiles\Debug.pubxml" />
-    <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Build\Build.props">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Build\Build.targets" />
+    <None Include="Build\Build.targets">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Views\Web.config" />
+    <None Include="Properties\PublishProfiles\Test.pubxml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -61,11 +77,28 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <Content Include="Web.config" />
+    <None Include="Web.Build.config">
+      <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.Debug.config">
+      <DependentUpon>Web.Build.config</DependentUpon>
+    </None>
+    <None Include="Web.Production.config">
+      <DependentUpon>Web.Publish.config</DependentUpon>
+    </None>
+    <None Include="Web.Publish.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
+      <DependentUpon>Web.Build.config</DependentUpon>
+    </None>
+    <None Include="Web.Stage.config">
+      <DependentUpon>Web.Publish.config</DependentUpon>
+    </None>
+    <None Include="Web.Template.config" />
+    <None Include="Web.Test.config">
+      <DependentUpon>Web.Publish.config</DependentUpon>
     </None>
   </ItemGroup>
   <PropertyGroup>
