--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -58,6 +58,12 @@
     <Content Include="Build\Build - Copy %284%29.targets">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Build\Build - Copy %282%29.props">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Build\Build - Copy %285%29.targets">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Empty.pubxml" />
     <None Include="Properties\PublishProfiles\Production.pubxml" />
     <None Include="Properties\PublishProfiles\Stage.pubxml" />
