--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -46,34 +46,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="Build\Build - Copy %282%29.targets">
+    <Compile Include="Test\EmbeddedResources\Test.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test.resx</DependentUpon>
+    </Compile>
+    <Content Include="Build\Backup\Build.props">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Build\Build - Copy %283%29.targets">
+    <Content Include="Build\Backup\Build.targets">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Build\Build - Copy.props">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Build\Build - Copy %284%29.targets">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Build\Build - Copy %282%29.props">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Build\Build - Copy %285%29.targets">
+    <Content Include="Build\Build - Copy.targets">
       <SubType>Designer</SubType>
     </Content>
     <None Include="Properties\PublishProfiles\Empty.pubxml" />
     <None Include="Properties\PublishProfiles\Production.pubxml" />
     <None Include="Properties\PublishProfiles\Stage.pubxml" />
-    <None Include="Build\Build - Copy.targets" />
     <None Include="Build\Build.props">
       <SubType>Designer</SubType>
     </None>
     <None Include="Build\Build.targets">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Test\Xml\Test.xml" />
     <Content Include="Views\Web.config" />
     <None Include="Properties\PublishProfiles\Test.pubxml" />
     <None Include="Views\Web.Debug.config">
@@ -106,6 +102,16 @@
     <None Include="Web.Test.config">
       <DependentUpon>Web.Publish.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Test\EmbeddedResources\Test.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Test.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Resource Include="Test\Resources\Test.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Test.Designer.cs</LastGenOutput>
+    </Resource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
